Add Handler for creating tasks

--- a/template/index.html
+++ b/template/index.html
@@ -14,8 +14,13 @@
         </article>
         <section>
             <form>
-                <input type="text" class="input" placeholder="Enter task">
-                <button type="submit" id="btn-submit">Add</button>
+                <input 
+                type="text" 
+                lass="input" 
+                id="task-input"
+                placeholder="Enter task">
+                <button type="submit" id="submit-btn">Add</button>
+                <p id="server-response"></p>
             </form>
         </section>
         <section>
@@ -42,5 +47,6 @@
             </table>
         </section>
     </main>
+    <script src="/static/js/add-task.js"></script>
 </body>
 </html>
